all: add customerId as query parameter to account search
Due to our load balancer setup we're unable to route
/customers/:id/accounts over to our Accounts service (instead of
Customers), so for now we're going to add ?customerId=... as part of
the account search endpoint. This is annoying.
